# python-rust-template

./: .gitattributes  .gitignore  Cargo.toml  Makefile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build_release.yml  ruff.yml  unit_tests.yml
docs/source/: conf.py  index.rst
python/project_name/: __init__.py  __main__.py  _project_name.pyi
src/: lib.rs
tests/: test_default.py
